--- a/public/style.css
+++ b/public/style.css
@@ -31,10 +31,10 @@ Version: 1.1
 
 /* Theme Colors */
 :root {
-  --accent-color: #C5A992;
+  --accent-color: #ca5050;
   --secondary-color: #C5A992;
   --dark-color: #2f2f2f;
-  --light-color: #F3F2EC;
+  --light-color: #fffefc;
   --body-text-color: #757575;
   --light-text-color: #afafaf;
   --dark-text-color: #2f2f2f;
@@ -342,7 +342,12 @@ ol li {
 }
 
 ul li.active a {
-  color: #daa556;
+  color: #ca5050;
+}
+
+ul li.a a:hover{
+  color: #ffffff;
+  background-color: #ca5050;
 }
 
 ul li:last-child,
@@ -385,9 +390,22 @@ figure {
 img {
   display: inline-block;
   border: 0;
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
   vertical-align: middle;
+}
+
+.google-app img .Download{
+  width: 150px;
+}
+
+@media screen and (max-width: 768px) {
+  .imglogo {
+    max-width: 50%;
+  }
+  img {
+    max-width: 100%;
+  }
 }
 
 ::selection {
@@ -507,6 +525,23 @@ p {
 
 p:empty {
   display: none;
+}
+
+.p-products{
+  color: #ffdaac;
+}
+
+.p-download{
+  color: #ffdaac;
+}
+
+.author-name{
+  color: #ffddcb;
+}
+
+.author-name2{
+  color: #ca5050;
+  font-size: 20px;
 }
 
 small {
@@ -999,14 +1034,14 @@ fieldset[disabled] a.btn {
 }
 
 .btn.btn-outline-accent {
-  background: transparent;
-  border-color: var(--accent-color);
-  color: var(--accent-color);
+  background: var(--accent-color);
+  color: var(--light-color);
 }
 
 .btn.btn-outline-accent:hover {
-  border-color: var(--dark-color);
-  color: var(--dark-color) !important;
+  background: transparent;
+  border: 1px solid var(--accent-color);
+  color: var(--accent-color) !important;
 }
 
 .btn.btn-outline-light {
@@ -1498,9 +1533,14 @@ button {
   color: #fff;
 }
 
-.btn-accent-arrow {
-  color: #111;
+.btn2-accent-arrow {
+  color: #fff27b;
 }
+
+.btn2-accent-arrow:hover {
+  color: #ffe70d;
+}
+
 
 .btn-wrap i.icon {
   transition: 0.5s ease-out;
@@ -1553,7 +1593,7 @@ button {
 /*--- Pattern Overlay
 -----------------------------------------------*/
 .pattern-overlay {
-  background-image: url(images/pattern1.png);
+  background-image: url(images/); /*hnnnnaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa*/
   background-repeat: no-repeat;
   background-position: top right;
 }
@@ -1561,7 +1601,7 @@ button {
 .leaf-pattern-overlay {
   background-image: url(images/leaf.png);
   background-repeat: no-repeat;
-  background-position: bottom left;
+  background-position: top left;
 }
 
 .corner-pattern-overlay {
@@ -1599,12 +1639,28 @@ button {
 }
 
 .section-title.divider {
+  color: #000000;
+  width: 100%;
+}
+
+.section-title.divider2 {
+  color: #fff;
   width: 100%;
 }
 
 .section-title.divider:after {
   content: "";
-  border-bottom: 3px solid #74642F;
+  border-bottom: 3px solid #ca5050;
+  position: absolute;
+  right: 0;
+  bottom: -16px;
+  left: 0;
+  width: 50px;
+}
+
+.section-title.divider2:after {
+  content: "";
+  border-bottom: 3px solid #fff27c;
   position: absolute;
   right: 0;
   bottom: -16px;
@@ -1632,8 +1688,12 @@ button {
 
 .section-header .title span {
   font-size: 14px;
-  color: #afafaf;
+  color: #e58585;
   text-transform: uppercase;
+}
+
+.title2-special-offe{
+  color: #7cde90;
 }
 
 
@@ -1697,8 +1757,9 @@ img.post-image {
 /* -- Top Menu Part
 --------------------------------------------------------------*/
 .top-content {
-  padding: 15px 0;
+  padding: 2px 0;
   border-bottom: 1px solid #E0E0E0;
+  background-color: #ca5050;
 }
 
 .social-links ul {
@@ -1712,6 +1773,11 @@ img.post-image {
   text-decoration: none;
 }
 
+.social-links a:hover,
+.for-buy:hover{
+  color: #000000;
+}
+
 .top-content li {
   padding-right: 30px;
 }
@@ -1721,7 +1787,7 @@ img.post-image {
 }
 
 .top-content a {
-  color: #555;
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -1745,7 +1811,7 @@ img.post-image {
 }
 
 .action-menu .icon {
-  font-size: 18px;
+  font-size: 13px;
   font-weight: 800;
 }
 
@@ -1755,10 +1821,10 @@ img.post-image {
 
 .action-menu .search-bar,
 .action-menu .open-icon-wrap {
-  width: 40px;
-  height: 40px;
-  background: #efeee8;
-  border-radius: 40px;
+  width: 30px;
+  height: 30px;
+  background: #fdfdfd;
+  border-radius: 50px;
   display: flex;
   justify-content: right;
   align-items: center;
@@ -1788,7 +1854,7 @@ img.post-image {
   margin-bottom: 0;
   font-weight: 300;
   padding-left: 20px;
-  background: #efeee8;
+  background: #fdfdfd;
 }
 
 .action-menu .side-nav-bar .menu-btn a,
@@ -1815,7 +1881,8 @@ img.post-image {
 
 @media screen and (max-width: 768px) {
   .action-menu .search-bar {
-    margin-top: 20px;
+    margin-top: 5px;
+    margin-bottom: 2px;
     width: 100%;
   }
 }
@@ -1825,7 +1892,7 @@ img.post-image {
 #header {
   padding: 20px 0;
   border-bottom: 1px solid #E0E0E0;
-  background-color: #f3f2ec;
+  background-color: #fffef8;
 }
 
 #header .menu-list a {
@@ -1834,14 +1901,21 @@ img.post-image {
   letter-spacing: 0.12em;
 }
 
+
 #header .menu-list a.active {
   color: var(--accent-color);
+  scale:calc(1.03);
 }
 
 /*----- Billboard
 --------------------------------------------------------------*/
+
+#billboard{
+  background-color: #fffef9;
+
+}
 #billboard .main-slider {
-  padding: 80px 0;
+  padding: 25px 10px 10px 10px;
 }
 
 .main-slider .slider-item {
@@ -1857,13 +1931,13 @@ img.post-image {
 }
 
 .banner-content h2.banner-title {
-  font-size: 4.5em;
+  font-size: 4em;
   font-weight: 500;
-  color: #222;
+  color: #000000;
 }
 
 .banner-content p {
-  margin: 0 0 30px 0;
+  margin: 0 0 20px 0;
 }
 
 #billboard .slick-dots {
@@ -1875,7 +1949,7 @@ img.post-image {
 
 #billboard button.slick-arrow {
   background: transparent;
-  border: 1px solid #E5E3DA;
+  border: 1px solid #ca5050;
   padding: initial;
   width: 50px;
   height: 50px;
@@ -1887,8 +1961,7 @@ img.post-image {
 }
 
 #billboard button.slick-arrow:hover {
-  border: 1px solid #74642F;
-  background-color: #E5E3DA;
+  background-color: #fff2f2;
 }
 
 #billboard button.prev.slick-arrow {
@@ -1900,7 +1973,7 @@ img.post-image {
 }
 
 #billboard .slick-arrow i.icon {
-  color: #8C8C8C;
+  color: #ca5050;
 }
 
 @media screen and (max-width: 1366px) {
@@ -1947,7 +2020,7 @@ img.post-image {
 /*----- Cient-holder Section
 --------------------------------------------------------------*/
 #client-holder {
-  background: #EDEBE4;
+  background: #ca5050;
   padding: 105px 0;
 }
 
@@ -1967,29 +2040,32 @@ img.post-image {
 /*----- Best Selling Section Section
 --------------------------------------------------------------*/
 #best-selling {
-  background: #EDEBE4;
-  padding: 120px 0;
+  background: #ca5050;
+  padding: 80px 0;
 }
 
 #best-selling .products-thumb {
-  margin-right: 60px;
-  box-shadow: 2px 6px 34px 4px rgba(63, 63, 63, 0.08);
+  
 }
 
-#best-selling .product-entry {
+/* #best-selling .product-entry {
   margin-top: 50px;
-}
+} */
 
 #best-selling .product-entry h3.item-title {
   font-size: 1.8em;
   font-weight: 100;
   margin-top: 15px;
+  color: #fff491;
 }
 
 #best-selling .product-entry .item-price {
   font-size: 1.5em;
-  color: #74642F;
   margin-bottom: 40px;
+}
+
+.item-price{
+  color: #ffffff;
 }
 
 @media screen and (max-width: 768px) {
@@ -2061,6 +2137,7 @@ img.books-image {
   display: block;
   font-size: 1.6em;
   padding: 40px 0;
+  color: #757575;
 }
 
 #quotation .author-name {
@@ -2084,8 +2161,8 @@ img.books-image {
 /*----- Special Offer Section
 --------------------------------------------------------------*/
 #special-offer .section-header {
-  background: #EDEBE4;
-  padding: 140px 0 220px;
+  background: #ca5050;
+  padding: 130px 0 220px;
   margin-bottom: -141px;
   z-index: -1;
 }
@@ -2093,6 +2170,7 @@ img.books-image {
 #special-offer .section-title {
   width: 70%;
   margin: 0 auto;
+  color: #fff;
 }
 
 span.prev-price {
@@ -2106,7 +2184,6 @@ span.prev-price {
 /*----- Subscribe Section
 --------------------------------------------------------------*/
 #subscribe {
-  background: #EDEBE4;
   padding: 120px 0;
 }
 
@@ -2257,8 +2334,8 @@ span.prev-price {
 /*----- Contact Section
 --------------------------------------------------------------*/
 #download-app {
-  background: #EDEBE4;
-  padding: 120px 0;
+  background: #ca5050;
+  padding: 90px 0;
   overflow: hidden;
   z-index: 0;
 }
@@ -2271,13 +2348,13 @@ span.prev-price {
     z-index: 0;
 }*/
 #download-app .app-info {
-  padding-top: 100px;
+  margin-top: 100px;
   margin-left: 50px;
 }
 
-#download-app .app-info p {
+/* #download-app .app-info p {
   margin-bottom: 50px;
-}
+} */
 
 @media screen and (max-width: 820px) {
   #download-app .grid {
@@ -2370,7 +2447,7 @@ footer#footer {
 
 .product-style img.product-item {
   position: relative;
-  background: #EFEEE8;
+  background: #ffffff;
   border: 1px solid #EAE8DF;
   padding: 15%;
   cursor: pointer;
@@ -2379,7 +2456,7 @@ footer#footer {
 
 .product-style button.add-to-cart {
   position: absolute;
-  background: #000;
+  background: #ca5050;
   color: #fff;
   width: 100%;
   margin: 0;
@@ -2407,7 +2484,7 @@ footer#footer {
 .product-item figcaption>h3 {
   font-size: 1.4em;
   font-weight: 500;
-  color: #74642F;
+  color: #ca5050;
   margin: 0;
 }
 .product-item figcaption>p {
@@ -2415,7 +2492,7 @@ footer#footer {
 }
 
 .product-item .item-price {
-  color: #74642F;
+  color: #ca5050;
   font-size: 1.3em;
 }
 
@@ -2442,3 +2519,8 @@ footer#footer {
     width: 100%;
   }
 }
+
+/* *::selection{
+  background: #ca5050;
+  color: white;
+} */
